<resources>
    <string name="app_name">Smarty</string>
    <string name="title_activity_navigation_client">NavigationClient</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_logout">Se déconnecter</string>

    <string name="menu_password">Changer mot de passe</string>
    <string name="menu_cart">Panier</string>
    <string name="menu_smart_phones">Smartphones</string>
    <string name="menu_portable_computers">Ordinateurs portables</string>
    <string name="menu_computer_accessories">Accessoires</string>
    <string name="menu_other">Computer Accessories</string>


</resources>