<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_home"
            android:icon="@drawable/ic_baseline_phone_iphone_24"
            app:itemIconTint="@color/black"
            app:itemTextColor="@color/black"
            android:title="@string/menu_smart_phones" />
        <item
            android:id="@+id/nav_gallery"
            android:icon="@drawable/ic_baseline_laptop_24"
            app:itemIconTint="@color/black"
            app:itemTextColor="@color/black"
            android:title="@string/menu_portable_computers" />
        <item
            android:id="@+id/nav_slideshow"
            android:icon="@drawable/ic_baseline_headset_mic_24"
            app:itemIconTint="@color/black"
            app:itemTextColor="@color/black"
            android:title="@string/menu_computer_accessories" />
        <item
            android:id="@+id/nav_cart"
            android:icon="@drawable/ic_baseline_shopping_cart_24"
            app:itemIconTint="@color/black"
            app:itemTextColor="@color/black"
            android:title="@string/menu_cart"/>
        <item
            android:id="@+id/nav_password"
            android:icon="@drawable/ic_baseline_vpn_key_24"
            app:itemIconTint="@color/black"
            app:itemTextColor="@color/black"
            android:title="@string/menu_password"
            />
    </group>
</menu>